--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-    "ownerNumber": ["94768535137@s.whatsapp.net"],
-    "ownerName": "DINUWA LK OFFICIAL BOT",
-    "instagram" : "https://instagram.com/dinuwa_lk._",
-    "botName": "Pizzaa🐧-Mdོ ",
-    "footer": "http://dinuwa-lk.github.io",
+    "ownerNumber": ["94761091578@s.whatsapp.net"],
+    "ownerName": "𝐌𝐈𝐇𝐈𝐑𝐔𝐊 𝐃𝐈𝐋𝐒𝐇𝐀𝐍 𝐎𝐅𝐅𝐈𝐂𝐈𝐀𝐋 𝐁𝐎𝐓",
+    "Whatsapp" : "https://chat.whatsapp.com/B6HzfS0HcG32LgWs5KDehUl",
+    "botName": "Pizzaa🐧-Mdོ MIHIRUK",
+    "footer": "https://github.com/SPCHATHU2/Haruka-Md/edit/v9.2/config.json",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
     "BotKey": "VdFlEL76",
-    "auto_welcomeMsg": false,
-    "auto_leaveMsg": false,    
+    "auto_welcomeMsg": true,
+    "auto_leaveMsg": true,    
     "autobio": true,
     "anticall": true,
     "autorespond": false,
